# less-coder

./: README.md  README_ZH.md  package.json  pyproject.toml
.github/workflows/: release.yml
clients/cli/: mcp_stdio.py  task_cli.py
docs/: README.md  release_pipeline.md
engine/rust/alsp/src/: lib.rs  main.rs
engine/rust/alsp_adapter/src/: main.rs
npm/: lesscoder.js
npm/adapter-win32-x64/: index.js  package.json
packaging/python/lesscoder_adapter_win_x64/: README.md  pyproject.toml
packaging/python/lesscoder_adapter_win_x64/src/lesscoder_adapter_win_x64/: __init__.py
tests/integration/: e2e_adapter.py  test_lesscoder_entrypoint.py  test_mcp_stdio_bridge.py  test_real_e2e_done.py  test_real_e2e_lsp_fallback.py  test_real_e2e_patch_conflict.py  test_stateless_project_root_calls.py
