[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lesscoder"
version = "0.1.5"
description = "Code-Native Engine MVP CLI (Java-focused) with local orchestrator and adapter workflow."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "lesscoder team" }]
license = { text = "Proprietary" }
keywords = ["ai", "coding-agent", "cli", "langgraph", "tree-sitter", "lsp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://example.com/lesscoder"

[project.scripts]
lesscoder = "clients.cli.lesscoder:main"

[tool.setuptools.packages.find]
include = ["clients*", "orchestrator*"]

